# bibchen

./: .gitignore  README.md  bibchen.py  pyproject.toml
test/: bibliography.bib  main.tex  main_aa.tex  main_aas.tex  main_numbers.tex
tests/: test_bibchen.py
