[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bibchen"
version = "0.1.0"
description = "Make a smaller bibliography for LaTeX proposals"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"

[project.scripts]
bibchen = "bibchen:main"

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
py-modules = ["bibchen"]
